--- a/html/contactos.html
+++ b/html/contactos.html
@@ -13,100 +13,65 @@
 </head>
 
 <body class="bgContactos">
-    <!-- ENCABEZADO -->
+    <!-- LISTA DE ENLACES NAVEGABLES -->
     <header class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <nav class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <h1 class="logo">ROLEX</h1>
             </a>
             <!-- menú hamburguesa -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- MENÚ DE NAVEGACIÓN -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html"><h2 class="pages">Inicio</h2></a>
+                        <a class="nav-link" href="../index.html">
+                            <h2 class="pages">Inicio</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html"><h2 class="pages">Productos</h2></a>
+                        <a class="nav-link" href="productos.html">
+                            <h2 class="pages">Productos</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="servicios.html"><h2 class="pages">Servicios</h2></a>
+                        <a class="nav-link" href="servicios.html">
+                            <h2 class="pages">Servicios</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sucursales.html"><h2 class="pages">Sucursales</h2></a>
+                        <a class="nav-link" href="sucursales.html">
+                            <h2 class="pages">Sucursales</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contactos.html"><h2 class="pages">Contactos</h2></a>
+                        <a class="nav-link" href="contactos.html">
+                            <h2 class="pages">Contactos</h2>
+                        </a>
                     </li>
                 </ul>
             </div>
-        </div>
+        </nav>
     </header>
 
-   <!-- CONTENIDO PRINCIPAL DE LA PÁGINA -->
+    <!-- CONTENIDO PRINCIPAL DE LA PÁGINA -->
     <main>
-        <div class="b-example-divider"></div>
-
-        <div class="container px-4 py-5" id="icon-grid">
-            <h2 class="pb-2 border-bottom">CONTACTANOS</h2>
-            <!-- contactos -->
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
-                <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#bootstrap" />
-                    </svg>
-                    <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">CHAT ONLINE</h3>
-                        <p>¿Tenés dudas o consultas? podés chatear on line con nosotros haciendo click aquí. Lunes a viernes hábiles de 8 a 20 horas</p>
-                    </div>
-                </div>
-                <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#cpu-fill" />
-                    </svg>
-                    <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">TELÉFONO</h3>
-                        <p>Llamá ahora al:
-
-                            0800-777-8000</p>
-                    </div>
-                </div>
-                <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#calendar3" />
-                    </svg>
-                    <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">ATENCIÓN AL CLIENTE</h3>
-                        <p>Ponete en contacto con nosotros</p>
-                    </div>
-                </div>
-                <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#home" />
-                    </svg>
-                    <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">WHATSAPP</h3>
-                        <p><a class="link" href="https://w.app/8bnpoG">clic aquí</a></p>
-                    </div>
-                </div>
-            </div>  
-            <div class="b-example-divider"></div>
-
-            <!-- redes -->
+        <section class="b-example-divider">
             <div class="container px-4 py-5" id="icon-grid">
-                <h2 class="pb-2 border-bottom">Seguí a ROLEX en lad redes</h2>
-
+                <h2 class="pb-2 border-bottom">CONTACTANOS</h2>
+                <!-- contactos -->
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
                     <div class="col d-flex align-items-start">
                         <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
                             <use xlink:href="#bootstrap" />
                         </svg>
                         <div>
-                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Facebook</h3>
-                            <p>Rolex Origin</p>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Chat online</h3>
+                            <p>¿Tenés dudas o consultas? podés chatear on line con nosotros haciendo click aquí. Lunes a
+                                viernes hábiles de 8 a 20 horas</p>
                         </div>
                     </div>
                     <div class="col d-flex align-items-start">
@@ -114,8 +79,10 @@
                             <use xlink:href="#cpu-fill" />
                         </svg>
                         <div>
-                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Instagram</h3>
-                            <p>Rolex Origin</p>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Teléfono</h3>
+                            <p>Llamá ahora al:
+
+                                0800-777-8000</p>
                         </div>
                     </div>
                     <div class="col d-flex align-items-start">
@@ -123,20 +90,60 @@
                             <use xlink:href="#calendar3" />
                         </svg>
                         <div>
-                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Twitter</h3>
-                            <p>ROLEX</p>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Atención al cliente</h3>
+                            <p>Ponete en contacto con nosotros</p>
                         </div>
                     </div>
                     <div class="col d-flex align-items-start">
-                        <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                            <use xlink:href="#home" />
-                        </svg>
                         <div>
-                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Tik Tok</h3>
-                            <p>Rolex Origin</p>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Whatsapp</h3>
+                            <p><a class="link" href="https://w.app/8bnpoG">clic aquí</a></p>
                         </div>
                     </div>
+        </section>
+
+        <!-- redes -->
+        <section class="container px-4 py-5" id="icon-grid">
+            <h2 class="pb-2 border-bottom">Seguí a ROLEX en las redes</h2>
+
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#bootstrap" />
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Facebook</h3>
+                        <p>Rolex Origin</p>
+                    </div>
                 </div>
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#cpu-fill" />
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Instagram</h3>
+                        <p>Rolex Origin</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#calendar3" />
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Twitter</h3>
+                        <p>ROLEX</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#home" />
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Tik Tok</h3>
+                        <p>Rolex Origin</p>
+                    </div>
+                </div>
+        </section>
     </main>
 
     <!-- PIÉ DE PÁGINA -->
