--- a/html/productos.html
+++ b/html/productos.html
@@ -13,9 +13,9 @@
 </head>
 
 <body class="bgIndex">
-    <!-- ENCABEZADO -->
+    <!-- LISTA DE ENLACES NAVEGABLES -->
     <header class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <nav class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <h1 class="logo">ROLEX</h1>
             </a>
@@ -27,23 +27,33 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html"><h2 class="pages">Inicio</h2></a>
+                        <a class="nav-link" href="../index.html">
+                            <h2 class="pages">Inicio</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html"><h2 class="pages">Productos</h2></a>
+                        <a class="nav-link" href="productos.html">
+                            <h2 class="pages">Productos</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="servicios.html"><h2 class="pages">Servicios</h2></a>
+                        <a class="nav-link" href="servicios.html">
+                            <h2 class="pages">Servicios</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sucursales.html"><h2 class="pages">Sucursales</h2></a>
+                        <a class="nav-link" href="sucursales.html">
+                            <h2 class="pages">Sucursales</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contactos.html"><h2 class="pages">Contactos</h2></a>
+                        <a class="nav-link" href="contactos.html">
+                            <h2 class="pages">Contactos</h2>
+                        </a>
                     </li>
                 </ul>
             </div>
-        </div>
+        </nav>
     </header>
 
     <!-- CONTENIDO PRINCIPAL DE LA PÁGINA -->
@@ -53,12 +63,12 @@
             <h3>Accesorios-Rolex</h3>
         </div>
         <!-- card -->
-        <div class="row container-fluid text-center ">
+        <section class="row container-fluid text-center ">
             <div class="col-xl-3 col-md-6 col-sm-12 contenedor-cads">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="../img/reloj1.webp" alt="...">
                     <div class="card-body">
-                        <h3 class="card-title">ROLEX-RIP</h3>
+                        <h4 class="card-title">ROLEX-RIP</h4>
                         <p class="card-text">$122000</p>
                         <a href="#" class="color-btn">Agregar al carrito</a>
                     </div>
@@ -69,7 +79,7 @@
                 <div class="card text-center" style="width: 18rem;">
                     <img src="../img/reloj2.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h3 class="card-title">ROLEX-RUBÍ</h3>
+                        <h4 class="card-title">ROLEX-RUBÍ</h4>
                         <p class="card-text">$92700</p>
                         <a href="#" class="color-btn">Agregar al carrito</a>
                     </div>
@@ -80,7 +90,7 @@
                 <div class="card text-center" style="width: 18rem;">
                     <img src="../img/rolex.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h3 class="card-title">ROLEX-WOMAN</h3>
+                        <h4 class="card-title">ROLEX-WOMAN</h4>
                         <p class="card-text">$65458</p>
                         <a href="#" class="color-btn">Agregar al carrito</a>
                     </div>
@@ -91,7 +101,7 @@
                 <div class="card text-center" style="width: 18rem;">
                     <img src="../img/rolex1.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h3 class="card-title">ROLEX-GOLDEN</h3>
+                        <h4 class="card-title">ROLEX-GOLDEN</h4>
                         <p class="card-text">$150000</p>
                         <a href="#" class="color-btn">Agregar al carrito</a>
                     </div>
@@ -102,7 +112,7 @@
                 <div class="card text-center" style="width: 18rem;">
                     <img src="../img/ww3.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h3 class="card-title">ROLEX-DATEJUST</h3>
+                        <h4 class="card-title">ROLEX-DATEJUST</h4>
                         <p class="card-text">$60000</p>
                         <a href="#" class="color-btn">Agregar al carrito</a>
                     </div>
@@ -113,7 +123,7 @@
                 <div class="card text-center" style="width: 18rem;">
                     <img src="../img/ww1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h3 class="card-title">ROLEX-PLUS</h3>
+                        <h4 class="card-title">ROLEX-PLUS</h4>
                         <p class="card-text">$120000</p>
                         <a href="#" class="color-btn">Agregar al carrito</a>
                     </div>
@@ -124,7 +134,7 @@
                 <div class="card text-center" style="width: 18rem;">
                     <img src="../img/ww8.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h3 class="card-title">ROLEX-CAS</h3>
+                        <h4 class="card-title">ROLEX-CAS</h4>
                         <p class="card-text">$55000</p>
                         <a href="#" class="color-btn">Agregar al carrito</a>
                     </div>
@@ -135,13 +145,13 @@
                 <div class="card text-center" style="width: 18rem;">
                     <img src="../img/opp1.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h3 class="card-title">ROLEX-STOR</h3>
+                        <h4 class="card-title">ROLEX-STOR</h4>
                         <p class="card-text">$137000</p>
                         <a href="#" class="color-btn">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
 
     <!-- PIE DE PÁGINA -->
