--- a/html/servicios.html
+++ b/html/servicios.html
@@ -13,14 +13,15 @@
 </head>
 
 <body class="bgIndex">
-    <!-- ENCABEZADO -->
+    <!-- LISTA DE ENLACES NAVEGABLES -->
     <header class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <nav class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <h1 class="logo">ROLEX</h1>
             </a>
             <!-- menú hamburguesa -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- MENÚ DE NAVEGACIÓN -->
@@ -53,7 +54,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </nav>
     </header>
 
     <!-- CONTENIDO PRINCIPAL DE LA PÁGINA -->
@@ -63,60 +64,63 @@
             <h3>Servicios-Rolex</h1>
         </div>
 
-        <div class="container marketing">
+        <section class="container marketing">
             <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
                 <div class="col-lg-6 px-0 container-fluid">
-                    <h1 class="display-4 fst-italic">Buscamos ofrecerte un mejor servicio...</h1>
-                    <p class="lead my-3">Por eso nuestra compañía ROLEX quiere ofrecerte reparaciones, pulidos, pintura y una amplia variedad de mallas, para lucir tu reloj como nuevo!</p>
+                    <h4 class="display-4 fst-italic">Buscamos ofrecerte un mejor servicio...</h4>
+                    <p class="lead my-3">Por eso nuestra compañía ROLEX quiere ofrecerte reparaciones, pulidos, pintura
+                        y una amplia variedad de mallas, para lucir tu reloj como nuevo!</p>
                 </div>
             </div>
-
+        </section>
+        <section class="row mb-2">
+            <div class="col-md-6">
+                <div class="row g-0 rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h5 class="mb-0 text-center">Reparaciones</h5>
+                        <hr>
+                        <img src="../img/recorte2.png" alt="" class="container-fluid transf">
+                        <p class="text-center mb-auto serv">Hacemos reparaciones, buscamos que logres tener un servicio
+                            eficiente con una ámplia variedad de repuestos orinigales.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="row g-0 rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h5 class="mb-0 text-center">Pulidos</h5>
+                        <hr>
+                        <img src="../img/recorte.png" alt="" class="container-fluid transf">
+                        <p class="mb-auto text-center serv">¡Que tu reloj no pierda brillo, Nosotros nos encargamos de
+                            eso! </p>
+                    </div>
+                </div>
+            </div>
             <div class="row mb-2">
                 <div class="col-md-6">
                     <div class="row g-0 rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                         <div class="col p-4 d-flex flex-column position-static">
-                            <h3 class="mb-0 text-center">Reparaciones</h3>
+                            <h5 class="mb-0 text-center">Repuestos originales</h5>
                             <hr>
-                            <img src="../img/recorte2.png" alt="" class="container-fluid transf">
-                            <p class="text-center mb-auto serv">Hacemos reparaciones, buscamos que logres tener un servicio eficiente con una ámplia variedad de repuestos orinigales.</p>
+                            <img src="../img/repuestospp.jpg" alt="" class="container-fluid transf">
+                            <p class="mb-auto text-center serv">Tenemos para ofrecerte repuestos originales en todas
+                                nuetras sucursales, incluso hacemos envíos a distintas partes del país.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-5">
                     <div class="row g-0 rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                         <div class="col p-4 d-flex flex-column position-static">
-                            <h3 class="mb-0 text-center">Pulidos</h3>
+                            <h5 class="mb-0 text-center">Mantenimiento</h5>
                             <hr>
-                            <img src="../img/recorte.png" alt="" class="container-fluid transf">
-                            <p class="mb-auto text-center serv">¡Que tu reloj no pierda brillo, Nosotros nos encargamos de eso! </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-md-6">
-                        <div
-                            class="row g-0 rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                            <div class="col p-4 d-flex flex-column position-static">
-                                <h3 class="mb-0 text-center">Repuestos originales</h3>
-                                <hr>
-                                <img src="../img/repuestospp.jpg" alt="" class="container-fluid transf">
-                                <p class="mb-auto text-center serv">Tenemos para ofrecerte repuestos originales en todas nuetras sucursales, incluso hacemos envíos a distintas partes del país.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-5">
-                        <div
-                            class="row g-0 rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                            <div class="col p-4 d-flex flex-column position-static">
-                                <h3 class="mb-0 text-center">Mantenimiento</h3>
-                                <hr>
-                                <img src="../img/imgcorte.png" alt="" class="container-fluid transf">
-                                <p class="mb-auto text-center serv">Podés traernos tu reloj y nosotros le hacemos mantenimeintopara que siempre se vea como nuevo!</p>
-                            </div>
+                            <img src="../img/imgcorte.png" alt="" class="container-fluid transf">
+                            <p class="mb-auto text-center serv">Podés traernos tu reloj y nosotros le hacemos
+                                mantenimeintopara que siempre se vea como nuevo!</p>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
     </main>
 
     <footer class="fixed-bottom">
