--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -13,56 +13,77 @@
 </head>
 
 <body class="bgIndex">
-    <!-- ENCABEZADO -->
+    <!-- LISTA DE ENLACES NAVEGABLES -->
     <header class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <nav class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <h1 class="logo">ROLEX</h1>
             </a>
             <!-- menú hamburguesa -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- MENÚ DE NAVEGACIÓN -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html"><h2 class="pages">Inicio</h2></a>
+                        <a class="nav-link" href="../index.html">
+                            <h2 class="pages">Inicio</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html"><h2 class="pages">Productos</h2></a>
+                        <a class="nav-link" href="productos.html">
+                            <h2 class="pages">Productos</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="servicios.html"><h2 class="pages">Servicios</h2></a>
+                        <a class="nav-link" href="servicios.html">
+                            <h2 class="pages">Servicios</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sucursales.html"><h2 class="pages">Sucursales</h2></a>
+                        <a class="nav-link" href="sucursales.html">
+                            <h2 class="pages">Sucursales</h2>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contactos.html"><h2 class="pages">Contactos</h2></a>
+                        <a class="nav-link" href="contactos.html">
+                            <h2 class="pages">Contactos</h2>
+                        </a>
                     </li>
                 </ul>
             </div>
-        </div>
+        </nav>
     </header>
-<!-- CONTENIDO PRINCIPAL DE LA PÁGINA -->
-<main>
-    <!-- titulo divisorio -->
+    <!-- CONTENIDO PRINCIPAL DE LA PÁGINA -->
+    <main>
+        <!-- titulo divisorio -->
         <div class="tituloP">
             <h3>Sucursales-Rolex</h3>
         </div>
 
-        <h3 class="sucursales">¡También podes chequear si tenés una sucursal en tu provincia!</h3>
+        <h4 class="sucursales">¡También podes chequear si tenés una sucursal en tu provincia!</h4>
 
-        <div class="container-fluid col-xl-3 col-md-6 col-sm-12 contenedor">
+        <section class="container-fluid">
+            <div class="contenedorIframe col-xl-3 col-md-6 col-sm-12 container-fluid">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3633731939585!2d-58.38242222409027!3d-34.594971872957345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccab65206c441%3A0xd3e3f63f78619203!2sRolex%20Argentina!5e0!3m2!1ses!2sar!4v1690909966002!5m2!1ses!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade" class="container-fluid"></iframe>
 
-            <iframe class="container-fluid col-xl-3 col-md-6 col-sm-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3633731939585!2d-58.38242222409027!3d-34.594971872957345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccab65206c441%3A0xd3e3f63f78619203!2sRolex%20Argentina!5e0!3m2!1ses!2sar!4v1690909966002!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53607.69383774043!2d-68.92025285136721!3d-32.88545229999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0936c8b38f2d%3A0x2b575d87d976fa6a!2sJoyeria%20y%20Relojeria%20Silvi!5e0!3m2!1ses!2sar!4v1690910229499!5m2!1ses!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade" class="container-fluid"></iframe>
 
-            <iframe class="container-fluid col-xl-3 col-md-6 col-sm-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53607.69383774043!2d-68.92025285136721!3d-32.88545229999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0936c8b38f2d%3A0x2b575d87d976fa6a!2sJoyeria%20y%20Relojeria%20Silvi!5e0!3m2!1ses!2sar!4v1690910229499!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    
-            <iframe class="container-fluid col-xl-3 col-md-6 col-sm-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53293.007791671065!2d-70.65491915136718!3d-33.40204289999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf261a320b45%3A0xa74617c55a4ee467!2sCasa%20Barros%20Joyer%C3%ADa%20y%20Relojer%C3%ADa%20%7C%20Distribuidor%20Oficial%20Rolex!5e0!3m2!1ses!2sar!4v1690910324780!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-</main>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53293.007791671065!2d-70.65491915136718!3d-33.40204289999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf261a320b45%3A0xa74617c55a4ee467!2sCasa%20Barros%20Joyer%C3%ADa%20y%20Relojer%C3%ADa%20%7C%20Distribuidor%20Oficial%20Rolex!5e0!3m2!1ses!2sar!4v1690910324780!5m2!1ses!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade" class="container-fluid"></iframe>
+            </div>
+        </section>
+    </main>
 
     <!-- PIÉ DE PÁGINA -->
     <footer class="fixed-bottom">
